fix: decrease the gap between posts (is it better?)

--- a/client/src/components/Home/Home.module.scss
+++ b/client/src/components/Home/Home.module.scss
@@ -14,6 +14,6 @@
 .posts_container {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 12px;
     margin-block: 15px;
 }
